# rust-encrypted-messenger

./: .gitignore  Cargo.toml  README.md  other_test_private.pem  other_test_public.pem  test_private.pem  test_public.pem
.cargo/: config
.github/workflows/: main.yml
src/: lib.rs  main.rs
src/test_keys/: public.pem  random_private.pem  random_public.pem  receiver_private.pem  receiver_public.pem  sender_private.pem
