[package]
name = "client"
version = "0.1.0"
authors = ["Travis Dockter <travisdock@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10.34", features = ["vendored"] }
crossterm = "0.19.0"
